@@ -40,6 +40,14 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="4.2.6" date="2022-06-15">
+      <description>
+	<p>
+	  Fixed FM Syncsynth missing synth generator.
+	</p>
+      </description>
+    </release>
+
     <release version="4.2.5" date="2022-06-14">
       <description>
 	<p>
